@@ -7,6 +7,7 @@ v0.9.0
 * [BGBUILD-81] post command execution w/ setarch breaks commands which are scripts
 * [BGBUILD-173] Include setarch package in default package list for RPM-based OSes
 * [BGBUILD-177] Fedora 13 builds have enabled firewall although they shouldn't have it
+* [BGBUILD-178] Remove sensitive data from logs
 
 v0.8.1
 
